# classification-experiments

./: .gitignore  README.md  myst.yml  pyproject.toml
doc/: 01 - Introduction.md  02 - Méthodologie générale.md  03 - Approches non paramétriques.md  03 - KNN.md  04 - Approches non linéaires.md  04 - Approches paramétriques.md  05 - Approches non linéaires.md  05 - Approches paramétriques linéaires.md  06 - Conclusion.md
results/: abalone8.joblib  australian.joblib  autompg.joblib  balance.joblib  bupa.joblib  german.joblib  glass.joblib  hayes.joblib  heart.joblib  iono.joblib  newthyroid.joblib  pageblocks.joblib  pima.joblib  segmentation.joblib  sonar.joblib  vehicle.joblib  wdbc.joblib  wine.joblib  wine4.joblib  yeast3.joblib  yeast6.joblib
src/: 01 - Introduction.md  03 - Approches paramétriques linéaires.md  05 - Implémentation non paramétriques.ipynb  06 - Implémentation paramétriques linéaires.ipynb  07 - Implémentation non linéaires.ipynb  build_src.py  get_dataset.py  get_dataset_original.py  prepdata_refactor.py  results.ipynb  template.ipynb  timing.ipynb  utils.py
src_built/: 0 - abalone8.ipynb  1 - abalone17.ipynb  10 - hayes.ipynb  11 - heart.ipynb  12 - iono.ipynb  13 - libras.ipynb  14 - newthyroid.ipynb  15 - pageblocks.ipynb  16 - pima.ipynb  17 - satimage.ipynb  18 - segmentation.ipynb  19 - sonar.ipynb  2 - abalone20.ipynb  20 - spambase.ipynb  21 - splice.ipynb  22 - vehicle.ipynb  23 - wdbc.ipynb  24 - wine.ipynb  25 - wine4.ipynb  26 - yeast3.ipynb  27 - yeast6.ipynb  3 - autompg.ipynb  4 - australian.ipynb  5 - balance.ipynb  7 - bupa.ipynb  (+3 more)
(+2 files in other folders)
