[project]
name = "classification-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "ipykernel>=6.29.5",
    "mystmd>=1.3.20",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "plotnine>=0.14.5",
    "scikit-learn>=1.6.1",
]
